Current Turn Task adaption #12 new logic

--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -643,39 +643,40 @@ function getTurnForTomorrow(task) {
 
 
 
-
-
 function getTurnForFutureDate(task, futureStr) {
     const formatDate = (d) => d.toISOString().split("T")[0];
     const userOrder = [...task.users];
     const completions = task.completions || {};
     const turnByDate = task.turnByDate || {};
 
+    const startDate = new Date(task.date.split(" to ")[0]);
     const futureDate = new Date(futureStr);
-    const startDate = new Date(futureStr);
-    startDate.setDate(startDate.getDate() - 1); // ✅ simulate from day before the future date
 
     const repeatLimit = task.repeat === "Daily" ? task.timesPerDay || 1 :
                         task.repeat === "Weekly" ? task.timesPerWeek || 1 :
                         task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
 
-    let currentIndex = userOrder.indexOf(getTurnForPastOrToday(task, formatDate(startDate)));
+    let currentIndex = userOrder.indexOf(task.turn || userOrder[0]);
     if (currentIndex === -1) currentIndex = 0;
 
     const d = new Date(startDate);
-    d.setDate(d.getDate() + 1); // Start simulating from the actual target date
-
     while (d <= futureDate) {
-        for (let i = 0; i < repeatLimit; i++) {
-            currentIndex = (currentIndex + 1) % userOrder.length;
+        const dStr = formatDate(d);
+        if (turnByDate[dStr]) {
+            currentIndex = userOrder.indexOf(turnByDate[dStr]);
+        } else {
+            const completionsToday = Array.isArray(completions[dStr]) ? completions[dStr] : [];
+            for (const user of completionsToday) {
+                if (userOrder.includes(user)) {
+                    currentIndex = (currentIndex + 1) % userOrder.length;
+                }
+            }
         }
         d.setDate(d.getDate() + 1);
     }
 
     return userOrder[currentIndex];
 }
-
-
 
 
 
