--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -545,8 +545,21 @@ document.querySelectorAll('.footer a').forEach(link => {
 
 
 
+
 function getTurnForDate(task, selectedDateStr) {
-    return getTurnBySimulation(task, selectedDateStr);
+    const todayStr = new Date().toISOString().split("T")[0];
+    const selectedStr = new Date(selectedDateStr).toISOString().split("T")[0];
+
+    if (selectedStr === todayStr) {
+        const yesterdayTurn = getTurnForYesterday(task);
+        return getTurnForPastOrToday(task, selectedStr, yesterdayTurn);
+    }
+
+    if (selectedStr > todayStr) {
+        return getTurnForFutureDate(task, selectedStr);
+    }
+
+    return getTurnForPastOrToday(task, selectedStr);
 }
 
 
@@ -555,7 +568,41 @@ function getTurnForDate(task, selectedDateStr) {
 
 
 
+function getTurnForPastOrToday(task, selectedStr, initialTurn = null) {
+    const formatDate = (d) => d.toISOString().split("T")[0];
+    const userOrder = [...task.users];
+    const completions = task.completions || {};
+    const turnByDate = task.turnByDate || {};
 
+    const startDate = new Date(task.date.split(" to ")[0]);
+    const selectedDate = new Date(selectedStr);
+    let currentIndex = initialTurn !== null
+        ? userOrder.indexOf(initialTurn)
+        : userOrder.indexOf(task.turn || userOrder[0]);
+    if (currentIndex === -1) currentIndex = 0;
+
+    const d = new Date(startDate);
+
+    while (d <= selectedDate) {
+        const dStr = formatDate(d);
+
+        if (turnByDate[dStr]) {
+            currentIndex = userOrder.indexOf(turnByDate[dStr]);
+        } else {
+            const completionsToday = Array.isArray(completions[dStr]) ? completions[dStr] : [];
+
+            for (const user of completionsToday) {
+                if (userOrder.includes(user)) {
+                    currentIndex = (currentIndex + 1) % userOrder.length;
+                }
+            }
+        }
+
+        d.setDate(d.getDate() + 1);
+    }
+
+    return userOrder[currentIndex];
+}
 
 
 
@@ -596,40 +643,33 @@ function getTurnForTomorrow(task) {
 
 
 
-function getTurnBySimulation(task, selectedStr) {
+function getTurnForFutureDate(task, futureStr) {
     const formatDate = (d) => d.toISOString().split("T")[0];
     const userOrder = [...task.users];
     const completions = task.completions || {};
     const turnByDate = task.turnByDate || {};
 
-    const selectedDate = new Date(selectedStr);
-    const prevDate = new Date(selectedDate);
-    prevDate.setDate(selectedDate.getDate() - 1);
-    const prevStr = formatDate(prevDate);
+    const today = new Date();
+    const futureDate = new Date(futureStr);
+    const startDate = new Date(today);
 
     const repeatLimit = task.repeat === "Daily" ? task.timesPerDay || 1 :
                         task.repeat === "Weekly" ? task.timesPerWeek || 1 :
                         task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
 
-    let currentIndex = 0;
-    const prevTurn = getTurnBySimulation(task, prevStr);
-    if (prevTurn) {
-        const idx = userOrder.indexOf(prevTurn);
-        currentIndex = idx === -1 ? 0 : idx;
-    }
+    let currentIndex = userOrder.indexOf(getTurnForYesterday(task));
+    if (currentIndex === -1) currentIndex = 0;
 
-    // Simulate today's completions
-    const completionsToday = Array.isArray(completions[selectedStr]) ? completions[selectedStr] : [];
-    for (const user of completionsToday) {
-        if (userOrder.includes(user)) {
+    const d = new Date(startDate);
+    while (d <= futureDate) {
+        for (let i = 0; i < repeatLimit; i++) {
             currentIndex = (currentIndex + 1) % userOrder.length;
         }
+        d.setDate(d.getDate() + 1);
     }
 
     return userOrder[currentIndex];
 }
-
-
 
 
 
@@ -822,7 +862,7 @@ async function finishTask(userName, task, button, selectedDate) {
     if (!task.completions) task.completions = {};
     if (!Array.isArray(task.completions[today])) task.completions[today] = [];
 
-    const currentTurn = getTurnForDate(task, today);
+    const currentTurn = (task.turnByDate?.[today]) || task.turn || task.users[0];
     const completionsToday = task.completions[today];
 
     // Prevent exceeding repeat count by same user
@@ -1282,7 +1322,10 @@ document.getElementById("nextMonth").addEventListener("click", () => {
     generateScrollableDates(monthOffset);
 });
 
-generateScrollableDates();
+handleDailyTurnReset().then(() => {
+    generateScrollableDates();
+});
+
 
 document.getElementById("scrollLeft").addEventListener("click", () => {
     document.getElementById("dayScrollContainer").scrollBy({
@@ -1297,6 +1340,37 @@ document.getElementById("scrollRight").addEventListener("click", () => {
         behavior: "smooth"
     });
 });
+
+
+
+
+async function handleDailyTurnReset() {
+    const todayStr = new Date().toISOString().split("T")[0];
+    const lastDate = localStorage.getItem("lastActiveDate");
+
+    if (todayStr === lastDate) return; // nothing to do
+
+    const adminEmail = localStorage.getItem("currentAdminEmail");
+    if (!adminEmail) return;
+
+    const response = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}`);
+    const result = await response.json();
+    const tasks = result.tasks || [];
+
+    for (const task of tasks) {
+        const yesterdayTurn = getTurnForYesterday(task);
+        const today = todayStr;
+
+        // Only set turn for today if not manually set already
+        if (!task.turnByDate) task.turnByDate = {};
+        if (!task.turnByDate[today]) {
+            task.turnByDate[today] = yesterdayTurn;
+            await saveTaskToBackend(task);
+        }
+    }
+
+    localStorage.setItem("lastActiveDate", todayStr);
+}
 
     </script>
 </body>
