Current Turn Task adaption #23 new logic

--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -625,22 +625,32 @@ function getTurnForYesterday(task) {
 
 
 function getTurnForTomorrow(task) {
+    const formatDate = (d) => d.toISOString().split("T")[0];
     const userOrder = [...task.users];
-    const yesterdayTurn = getTurnForYesterday(task);
-    let currentIndex = userOrder.indexOf(yesterdayTurn);
-    if (currentIndex === -1) currentIndex = 0;
 
+    const today = new Date();
+    const todayStr = formatDate(today);
+
+    // Determine current turn and completions for today
+    const todayTurn = getTurnForPastOrToday(task, todayStr);
+    const completionsToday = Array.isArray(task.completions?.[todayStr]) ? task.completions[todayStr] : [];
     const repeatLimit = task.repeat === "Daily" ? task.timesPerDay || 1 :
                         task.repeat === "Weekly" ? task.timesPerWeek || 1 :
                         task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
 
-    // Simulate perfect completions
-    for (let i = 0; i < repeatLimit; i++) {
+    let currentIndex = userOrder.indexOf(todayTurn);
+    if (currentIndex === -1) currentIndex = 0;
+
+    // Simulate tomorrow's turn by applying today's progress
+    const simulatedCompletions = repeatLimit;
+
+    for (let i = 0; i < simulatedCompletions; i++) {
         currentIndex = (currentIndex + 1) % userOrder.length;
     }
 
     return userOrder[currentIndex];
 }
+
 
 
 
